fix bio page not covering full screen on high resolutions

--- a/src/containers/Bio/Bio.css
+++ b/src/containers/Bio/Bio.css
@@ -1,6 +1,6 @@
 .bio-container {
   background-color: #d4d4d4;
-  min-height: 100%;
+  min-height: 100vh;
   #padding-bottom: 75px;
   position: relative;
   background-position: center;
